# backend/src/api-v1/challenges/challenges.route.ts
@@ -2,12 +2,33 @@ import type { Request, Response} from "express"
 // tslint:disable-next-line:no-duplicate-imports
 import { Router } from "express";
 import Controller from "./challenges.controller";
+import { schema, validateBody } from "../../helpers/validation";
 
 const challenges: Router = Router();
 const controller = new Controller();
 
+  // TODO add @Response
 challenges.get("/",  async (req: Request, res: Response) => {
     const response = await controller.getAllChallenges(req.query);
+
+    return res.send(response);
+});
+
+challenges.post("/",  async (req: Request, res: Response) => {
+    validateBody(schema.ChallengeCreateModel)
+    const response = await controller.create(req.body);
+    
+    return res.send(response);
+});
+
+challenges.put("/:id",  async (req: Request, res: Response) => {
+    const response = await controller.update(+req.params.id, req.body);
+
+    return res.send(response);
+});
+
+challenges.delete("/:id",  async (req: Request, res: Response) => {
+    const response = await controller.delete(+req.params.id);
 
     return res.send(response);
 });
