# backend/src/helpers/validation/schemaDefinition.ts
@@ -1,3 +1,5 @@
 export { UserInterface } from "../auth/types"
 
 export { UserLoginRequest } from "../../types/users/user"
+
+export { ChallengeCreateModel } from "../../types/challenges/challenge"
