# backend/src/types/challengeUnits/challengeUnit.ts
@@ -1,0 +1,7 @@
+import { ChallengeCreateModel } from "../challenges/challenge"
+
+export interface challengeUnit {
+    id: number,
+    title: string,
+    // challenges: ChallengeCreateModel[]
+}
